# open-data

./: README.md  package.json  pyproject.toml  runserver.py
contrib/: install.sh  update.sh
instance/: config.py  production.py.cfg
opendata/: __init__.py  bootstrap.py
opendata/models/: stats.py
