[tool.poetry]
name = "opendata"
version = "0.0.1"
description = "Statistics data available for public"
authors = []
license = "AGPL-3.0-or-later"

readme = "README.md"

homepage = "https://github.com/CASES-LU/open-data"
repository = "https://github.com/CASES-LU/open-data"
documentation = "https://github.com/CASES-LU/open-data"

keywords = ["cases", "security", "stats", "opendata", "api"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Topic :: Security",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)"
]

include = [
    "README.md",
    "COPYING",
    "runserver.py"
]

packages = [
    { include = "opendata" },
    { include = "instance" },
]

[tool.poetry.scripts]
monarc-stats-service = "runserver:run"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
requests = "^2.23.0"
pandas = "^1.0.4"
flask_restx = "^0.2.0"
jsonschema = "^3.2.0"
Flask-SQLAlchemy = "^2.4.3"
psycopg2-binary = "^2.8.5"
flask_principal = "^0.4.0"
flask_login = "^0.5.0"
tabulate = "^0.8.7"
Flask-Babel = "^2.0.0"
alembic = "^1.5.4"
Flask-Migrate = "^2.6.0"

[tool.poetry.dev-dependencies]
sphinx = "^3.0.3"
flake8 = "^3.7.9"
sphinx_rtd_theme = "^0.4.3"
pytest = "^5.4.3"
gitchangelog = "^3.0.4"
mypy = "^0.800"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
